Add index.html meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
 		<link rel="trollo icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Web site created using create-react-app" />
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<base href="/" />
 		<title>Reciper</title>
 	</head>
 	<body>
