--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 		<meta name="description" content="Web site created using create-react-app" />
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
+		<meta property="og:title" content="Reciper" />
+		<meta property="og:description" content="팀원 모집부터 프로젝트 협업까지 레시퍼를 이용하세요!" />
+		<meta property="og:url" content="https://reciper.me" />
 		<base href="/" />
 		<title>Reciper</title>
 	</head>
