Add og tag image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 		<meta property="og:title" content="Reciper" />
 		<meta property="og:description" content="팀원 모집부터 프로젝트 협업까지 레시퍼를 이용하세요!" />
 		<meta property="og:url" content="https://reciper.me" />
+		<meta property="og:image" content="../src/image/big_logo.png" />
+		<meta property="og:image:width" content="150" />
+
 		<base href="/" />
 		<title>Reciper</title>
 	</head>
