--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,16 @@
 		<meta property="og:url" content="https://reciper.me" />
 		<meta property="og:image" content="../src/images/big_logo.png" />
 		<meta property="og:image:width" content="150" />
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-90WPGY3Y6S"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
+			gtag('config', 'G-90WPGY3Y6S');
+		</script>
 		<base href="/" />
 		<title>Reciper</title>
 	</head>
